fix: layout issue fix for large documents

--- a/sideNav/src/components/sidebar/sidebar.scss
+++ b/sideNav/src/components/sidebar/sidebar.scss
@@ -20,7 +20,9 @@ $increase-font-size-on-larger-screens: false;
 	color: $color-x-dark;
 	overflow: auto;
 }
-@media (max-width: 1036px) {
+
+
+@media (max-width: 1033px) {
 	.burger-menu {
 	  display: flex;
 	  padding: 0.5rem;
@@ -29,13 +31,25 @@ $increase-font-size-on-larger-screens: false;
 	.l-docs {
         grid-template-columns: 344px minmax(0, 1fr);
     }
-  }
+}
 
-  @media (min-width: calc(1036px + 15rem)) {
+@media (min-width: calc(1036px + 15rem)) {
     .l-docs {
         grid-template-columns: 344px minmax(0, 1fr) 25rem;
-		grid-template-rows: auto auto 100vh auto;
+		grid-template-rows: auto auto minmax(100vh,1fr) auto;
     }
+	
+}
+
+@media (max-width: 800px) {
+	.burger-menu {
+		display: flex;
+		padding: 0.5rem;
+		margin-left: 42px;
+	  }
+	.l-docs {
+		grid-template-columns: minmax(0, 100vw);
+	}
 }
 
 .navigation__about-container {
